--- a/index.html
+++ b/index.html
@@ -17,7 +17,11 @@
                 DANGER
             </span>
             <span id="descr">
-                desc
+                You have 10 attempts to guess the right
+                number or else you'll get <span style="font-weight: bold;">CAUGHT</span>;
+            </span>
+            <span id="hint">
+                Hint: ithe number is between 1 and 100;
             </span>
 
         </div>
