add fallback pic

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 <body>
     <video autoplay muted loop id="bg_vid" >
         <source src="images/31276859_4k-closeup-futuristic-display-of-binary-code-1-s-and-0-s-looping_by_butlerm_preview.mp4" type="video/mp4">
+        <img src="images/vlcsnap-2021-12-02-21h04m48s408.png">
     </video>
     <div id="lose">
         <div id="access_denied">
